# yucedu-converter

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release-windows.yml  release.yml  test-windows.yml
docs/: Windows构建说明.md  macOS说明.md  使用说明.md  兼容报告.md  发布包目录说明.md  发布说明.md  多平台路线图.md  更新日志.md  构建说明.md  测试与兼容报告.md  第三方组件.md  路线图.md  转换格式说明.md  项目结构.md
docs/research/: MacNetPlayer本地分析.md  上游播放器来源.md
docs/superpowers/plans/: 2026-07-16-github-first-release.md
docs/superpowers/specs/: 2026-07-16-github-first-release-design.md
packaging/macos/: launcher.py  yucedu-converter.spec
packaging/windows/: launcher.py  version_info.template.txt  version_info.txt  yucedu-converter.spec
scripts/: build_macos.sh  build_windows.ps1  check_privacy.py  package_macos.sh  package_release.ps1  smoke_test_gui.py  verify_taskbar_icon.py  version_tool.py
src/yucedu_converter/: __init__.py  converter.py  gui.py  main.py  player.py  settings.py  theme.py
tests/: test_converter.py  test_player.py  test_regression_fixture.py  test_settings.py  test_version.py
tests/fixtures/: README.md
